--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "babel-core": "^6.20.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-register": "^6.18.0",
+    "babelify": "^7.3.0",
     "browser-sync": "2.11.2",
+    "browserify": "^13.0.1",
+    "browserify-shim": "^3.8.12",
     "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-babel": "^6.1.2",
@@ -32,6 +35,7 @@
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "^1.1.0",
     "rimraf": "2.5.2",
+    "sass-mediaqueries": "^1.6.1",
     "stream-combiner2": "^1.1.1",
     "through2": "^2.0.3",
     "vinyl-buffer": "^1.0.0",
