--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
 		"through2": "^2.0.3",
 		"vinyl-buffer": "^1.0.0",
 		"vinyl-source-stream": "^1.1.0",
-		"tsify": "3.0.0",
-		"watchify": "^3.7.0"
+		"tsify": "3.0.0"
 	},
 	"dependencies": {
 		"jquery": "^3.1.1",
