--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-	"name": "MyProject",
-	"version": "1.0.0",
-	"author": "",
-	"license": "ISC",
-	"repository": {
-		"type": "git",
-		"url": ""
-	},
-	"scripts": {
-		"postinstall": "",
-		"start": ""
-	},
-	"devDependencies": {
-		"babel-core": "^6.20.0",
-		"babel-preset-es2015": "^6.18.0",
-		"babel-register": "^6.18.0",
-		"babelify": "^7.3.0",
-		"browser-sync": "2.11.2",
-		"browserify": "^13.0.1",
-		"browserify-shim": "^3.8.12",
-		"gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
-		"gulp-autoprefixer": "3.1.0",
-		"gulp-babel": "^6.1.2",
-		"gulp-concat": "2.6.0",
-		"gulp-concat-css": "^2.2.0",
-		"gulp-csso": "^2.0.0",
-		"gulp-eslint": "2.0.0",
-		"gulp-if": "^2.0.2",
-		"gulp-load-plugins": "1.2.0",
-		"gulp-notify": "2.2.0",
-		"gulp-pug": "^3.0.3",
-		"gulp-sass": "2.2.0",
-		"gulp-sass-glob": "^1.0.6",
-		"gulp-sourcemaps": "1.6.0",
-		"gulp-uglify": "^1.1.0",
-		"rimraf": "2.5.2",
-		"sass-mediaqueries": "^1.6.1",
-		"stream-combiner2": "^1.1.1",
-		"through2": "^2.0.3",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-source-stream": "^1.1.0",
-		"tsify": "3.0.0"
-	},
-	"dependencies": {
-		"jquery": "^3.1.1",
-		"normalize.css": "^5.0.0"
-	}
+  "name": "MyProject",
+  "version": "1.0.0",
+  "author": "",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": ""
+  },
+  "scripts": {
+    "postinstall": "typings install",
+    "start": ""
+  },
+  "devDependencies": {
+    "babel-core": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-register": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browser-sync": "2.11.2",
+    "browserify": "^13.0.1",
+    "browserify-shim": "^3.8.12",
+    "gulp": "git+https://git@github.com/gulpjs/gulp.git#4.0",
+    "gulp-autoprefixer": "3.1.0",
+    "gulp-babel": "^6.1.2",
+    "gulp-concat": "2.6.0",
+    "gulp-concat-css": "^2.2.0",
+    "gulp-csso": "^2.0.0",
+    "gulp-eslint": "2.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-load-plugins": "1.2.0",
+    "gulp-notify": "2.2.0",
+    "gulp-pug": "^3.0.3",
+    "gulp-sass": "2.2.0",
+    "gulp-sass-glob": "^1.0.6",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-tslint": "^7.0.1",
+    "gulp-uglify": "^1.1.0",
+    "rimraf": "2.5.2",
+    "sass-mediaqueries": "^1.6.1",
+    "stream-combiner2": "^1.1.1",
+    "through2": "^2.0.3",
+    "tsify": "3.0.0",
+    "tslint": "^4.2.0",
+    "typings": "^2.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "jquery": "^3.1.1",
+    "normalize.css": "^5.0.0"
+  }
 }
