--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,17 @@
 {
 	"compilerOptions": {
-		"noImplicitAny": true,
-		"target": "es2015"
-	}
+		"outDir": "public/js",
+		"target": "es5",
+		"module": "system",
+		"moduleResolution": "node",
+		"sourceMap": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"removeComments": false,
+		"noImplicitAny": false
+	},
+	"exclude": [
+		"gulpfile.ts",
+		"node_modules"
+	]
 }
